doc/ingress/traefik/nacos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nacos
  labels:
    app: nacos
spec:
  selector:
    matchLabels:
      app: nacos
  template:
    metadata:
      name: nacos
      labels:
        app: nacos
        tier: mysql
    spec:
      containers:
        - name: nacos
          image: nacos/nacos-server:1.4.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8848
---
apiVersion: v1
kind: Service
metadata:
  name: nacos
  labels:
    app: nacos
spec:
  selector:
    app: nacos
  ports:
    - port: 8848
      targetPort: 8848
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nacos-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: nacos.hkicloud.com
      http:
        paths:
          - backend:
              serviceName: nacos
              servicePort: 8848
