doc/ingress/traefik/nexus.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonatype-nexus
  labels:
    app: sonatype-nexus
spec:
  selector:
    app: sonatype-nexus
  ports:
    - name: sonatype-nexus
      port: 8081
      protocol: TCP
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonatype-nexus
  labels:
    app: sonatype-nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonatype-nexus
  template:
    metadata:
      labels:
        app: sonatype-nexus
    spec:
      containers:
        - name: sonatype-nexus
          image: sonatype/nexus3:3.17.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
              name: server
          livenessProbe:
            httpGet:
              port: 8081
              path: /
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 6
          readinessProbe:
            httpGet:
              port: 8081
              path: /
            initialDelaySeconds: 30
            periodSeconds: 30
            failureThreshold: 6
          resources:
            limits:
              cpu: 1000m
              memory: 2048Mi
            requests:
              cpu: 500m
              memory: 1024Mi
          volumeMounts:
            - mountPath: /nexus-data
              name: sonatype-nexus-data
      volumes:
        - name: sonatype-nexus-data
          persistentVolumeClaim:
            claimName: sonatype-nexus
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nexus-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: nexus.hkicloud.com
      http:
        paths:
          - backend:
              serviceName: sonatype-nexus
              servicePort: 8081
