doc/ingress/traefik/redis-traefik.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-local
  labels:
    app: redis-local
spec:
  selector:
    matchLabels:
      app: redis-local
  template:
    metadata:
      name: redis-local
      labels:
        app: redis-local
    spec:
      containers:
        - name: redis-local
          image: redis
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-local
  labels:
    app: redis-local
spec:
  selector:
    app: redis-local
  ports:
    - port: 6379
      targetPort: 6379
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingresss
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
    traefik.ingress.kubernetes.io/frontend-entry-points: tcp
spec:
  rules:
    - host: cloub.mydlq.club
